--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "Rust bindings for Ultralight. Next-Generation HTML Renderer"
 homepage = "https://ultralig.ht/"
+license-file = "LICENSE"
 
 [dependencies]
 image = "*"
