--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,12 @@ license-file = "LICENSE"
 categories = ["gui", "web-programming", "visualization", "rendering", "graphics"]
 
 [dependencies]
-image = "0.24.0"
+image = { version = "0.24.0", default-features = false }
 
 [build-dependencies]
-bindgen = "0.68.0"
+bindgen =  { version="0.68.0", optional = true }
+fs_extra = "1.3.0"
+
+[features]
+default = []
+generate_bindings = ["dep:bindgen"]
