--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ultralight-api"]
 	path = ultralight-api
-	url = https://github.com/VZout/ultralight.git
+	url = https://github.com/ultralight-ux/Ultralight-API.git
