--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ categories = ["gui", "web-programming", "visualization", "rendering", "graphics"
 [dependencies]
 image = { version = "0.24.0", default-features = false }
 
+[dev-dependencies]
+image = { version = "0.24.0", default-features = false, features = ["png"] }
+
 [build-dependencies]
 bindgen =  { version="0.68.1", optional = true }
 fs_extra = "1.3.0"
