--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,3 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose --examples
+    - name: Run examples
+      run: |
+        cargo run -r --example basic
+        cargo run -r --example javascript
