--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Rust bindings for Ultralight: Next-Generation HTML Renderer"
 homepage = "https://ultralig.ht/"
 license-file = "LICENSE"
 categories = [ "gui", "web-programming", "visualization", "rendering", "graphics" ]
+#exclude = ["examples/", "ultralight-api/", ".*"]
 
 [dependencies]
 image = { version = "0.24.0", default-features = false }
@@ -17,9 +18,11 @@ image = { version = "0.24.0", default-features = false, features = [ "png" ] }
 
 [build-dependencies]
 bindgen = { version = "0.68.1", optional = true }
-fs_extra = "1.3.0"
+fs_extra = { version = "1.3.0", optional = true }
+ureq = { version = "2.9.1", optional = true, default-features = false, features=["tls"] }
 
 [features]
-default = [  ]
+#default = ["requires_dll"]
 filewatching = [ "dep:notify" ]
 generate_bindings = [ "dep:bindgen" ]
+requires_dll = [ "dep:fs_extra", "dep:ureq" ]
