--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ultralight"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2021"
 description = "Rust bindings for Ultralight: Next-Generation HTML Renderer"
 homepage = "https://ultralig.ht/"
@@ -9,12 +9,12 @@ categories = [ "gui", "web-programming", "visualization", "rendering", "graphics
 #exclude = ["examples/", "ultralight-api/", ".*"]
 
 [dependencies]
-image = { version = "0.24.0", default-features = false }
+image = { version = "0.25.1", default-features = false, optional = true }
 mime_guess = "2.0.4"
 notify = { version = "6.1.1", optional = true }
 
 [dev-dependencies]
-image = { version = "0.24.0", default-features = false, features = [ "png" ] }
+image = { version = "0.25.1", default-features = false, features = [ "png" ] }
 wgpu = { version = "0.19.1", features = [ "spirv"] }
 env_logger = "0.10"
 pollster = "0.3"
@@ -29,7 +29,7 @@ fs_extra = { version = "1.3.0", optional = true }
 ureq = { version = "2.9.1", optional = true, default-features = false, features=["tls"] }
 
 [features]
-#default = ["requires_dll"]
 filewatching = [ "dep:notify" ]
 generate_bindings = [ "dep:bindgen" ]
+image = [ "dep:image" ]
 requires_dll = [ "dep:fs_extra", "dep:ureq" ]
