--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ image = { version = "0.25.1", default-features = false, features = [ "png" ] }
 wgpu = { version = "0.19.1", features = [ "spirv"] }
 env_logger = "0.10"
 pollster = "0.3"
-nohash = "*"
+nohash = "0.2.0"
 bytemuck = { version = "1.13.1", features = [ "derive" ] }
 hassle-rs = "0.11.0"
 winit = { version = "0.29" }
