--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.7"
 edition = "2021"
 description = "Rust bindings for Ultralight: Next-Generation HTML Renderer"
 homepage = "https://ultralig.ht/"
+repository = "https://github.com/VZout/ultralight/"
 license-file = "LICENSE"
 categories = [ "gui", "web-programming", "visualization", "rendering", "graphics" ]
 #exclude = ["examples/", "ultralight-api/", ".*"]
